--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,65 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
+    android:clipChildren="false"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <RadioGroup
-
-        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimaryDark"
         android:id="@+id/rg"
         android:gravity="end"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <RadioButton
+            android:textSize="12sp"
+            android:background="@android:color/transparent"
             android:id="@+id/tab_1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
-            android:text="资讯" />
+            android:text="1" />
 
         <RadioButton
+            android:textSize="12sp"
+            android:background="@android:color/transparent"
             android:id="@+id/tab_2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
-            android:text="资讯" />
+            android:text="2" />
 
         <RadioButton
-
+            android:textSize="12sp"
+            android:background="@android:color/transparent"
             android:layout_gravity="bottom"
             android:id="@+id/tab_3"
-            android:text="微博"
+            android:text="3"
             android:button="@null"
             android:layout_width="0dip"
-            android:layout_height="80dp"
+            android:layout_height="60dp"
             android:layout_weight="1" />
 
         <RadioButton
+            android:textSize="12sp"
+            android:background="@android:color/transparent"
             android:id="@+id/tab_4"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
-            android:text="资讯" />
+            android:text="4" />
 
         <RadioButton
+            android:textSize="12sp"
+            android:background="@android:color/transparent"
             android:id="@+id/tab_5"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
-            android:text="资讯" />
+            android:text="5" />
 
     </RadioGroup>
 
