代码生成 TextView Selector  颜色选择器 colorlist

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent">
 
 
+
+    <ImageView
+        android:id="@+id/imageBitmap"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <RadioGroup
 
         android:id="@+id/rg"
